# programming-examples

./: README.md
c/: CMakeLists.txt  basics.c  functions.c  main.c  meson.build
c/src/: basics.c  control.c  examples.h  main.c
c/src/examples/: basics.c  concurrency.c  control.c  dyn_array.c  enums.c  functions.c  mem_management.c  preprocessor.c  structs.c  unions.c  unit_test.c
c/src/include/: examples.h
cpp/: meson.build
cpp/src/: main.cpp
cpp/src/examples/: basics.cpp  classes.cpp  containers.cpp  control.cpp  enums.cpp  exceptions.cpp  functions.cpp  namespaces.cpp  op_overloading.cpp  optionals.cpp  smart_ptrs.cpp  strings.cpp  structs.cpp
cpp/src/include/: examples.h
dart/: analysis_options.yaml  pubspec.yaml
futhark/: .envrc  flake.nix
futhark/src/: main.fut
haskell/: flake.nix  programming-examples.cabal
haskell/app/: Lists.hs  Main.hs
julia/: flake.nix
julia/src/: Basics.jl  Control.jl  Functions.jl  Main.jl  Modules.jl  Structs.jl
rust/: .gitignore  Cargo.toml
rust/src/: async.rs  basics.rs  collections.rs  concurrency.rs  control.rs  enums.rs  enums_structs_modules.rs  error_handling.rs  from_into.rs  functions.rs  macros.rs  main.rs  modules.rs  structs.rs  traits.rs
